k8s/templates/app-template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: tshub-APP_NAME
  labels:
    app: APP_NAME
spec:
  type: ClusterIP
  selector:
    app: APP_NAME
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
